kern_srcs += files(
    'core/error.c',
    'core/eval.c',
    'core/exec.c',
    'core/exec-operand.c',
    'core/libc.c',
    'core/ns.c',
    'core/object.c',
    'core/opregion.c',
    'core/os_methods.c',
    'core/variable.c',
    'core/vsnprintf.c',
    'helpers/pc-bios.c',
    'helpers/pci.c',
    'helpers/resource.c',
    'helpers/sci.c',
    'helpers/pm.c',
    'drivers/ec.c',
    'drivers/timer.c',
)

kern_incs += [ include_directories('include') ]
